// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDFPage render should pass pass proper height when state.height 1`] = `
<div
  className="doc-page"
  id="page-2"
  style={
    Object {
      "height": 25,
    }
  }
/>
`;

exports[`PDFPage render should render a div as pageContainer 1`] = `
<div
  className="doc-page"
  id="page-2"
  style={
    Object {
      "height": 1100,
    }
  }
/>
`;
